--- a/config/database.yml
+++ b/config/database.yml
@@ -56,8 +56,14 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  # <<: *default
+  adapter: postgresql
+  encoding: utf8
   database: ww-code-api_test
+  pool: 5
+  username: root
+  password:  
+
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
