--- a/config/database.yml
+++ b/config/database.yml
@@ -56,13 +56,8 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  # <<: *default
-  adapter: postgresql
-  encoding: utf8
-  database: ww-code-api_test
-  pool: 5
-  username: root
-  password:  
+  <<: *default
+  database: ww-code-api_test 
 
 
 # As with config/secrets.yml, you never want to store sensitive information,
