--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: ww-code-api_development
+  database: wwcode_api_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: ww-code-api
+  #username: wwcode_api
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,18 +57,18 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ww-code-api_test 
+  database: wwcode_api_test 
   # <<: *default
   adapter: postgresql
   encoding: utf8
-  database: ww-code-api_test
+  database: wwcode_api_test
   pool: 5
   username: root
   password:  
 
 
   <<: *default
-  database: ww-code-api_test 
+  database: wwcode_api_test 
 
 
 
@@ -93,9 +93,9 @@ test:
 #
 production:
   # <<: *default
-  database: ww-code-api_production
+  database: wwcode_api_production
   adapter: postgresql
   encoding: unicode
   pool: 5
-  # username: ww-code-api
-  # password: <%= ENV['WW-CODE-API_DATABASE_PASSWORD'] %>
+  # username: wwcode_api
+  # password: <%= ENV['WWCODE_API_DATABASE_PASSWORD'] %>
