--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+# Config files to ignore
+/config/database.yml
+
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
