--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -29,10 +29,10 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: wwcode_api
+  username: postgres
 
   # The password associated with the postgres role (username).
-  #password:
+  password: supersecret
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,19 +57,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: wwcode_api_test 
-  # <<: *default
   adapter: postgresql
   encoding: utf8
   database: wwcode_api_test
   pool: 5
-  username: root
-  password:  
-
-
-  <<: *default
-  database: wwcode_api_test 
-
+  username: postgres
+  password: supersecret
 
 
 # As with config/secrets.yml, you never want to store sensitive information,
